# nhl-fanteasy

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
api/src/routes/: auth.ts  players.ts
apps/ai/: project.json
apps/ai/ranker/: pyproject.toml
apps/api/: project.json
apps/api/src/: main.ts
apps/api/src/routes/: auth.ts  players.ts
apps/web/: eslint.config.mjs  project.json
apps/web-e2e/: project.json
apps/web/src/: index.html
apps/web/src/app/: app.ts
libs/shared-domain/: jest.config.ts  project.json
python/ranker/src/ranker/: cli.py
shared-domain/: package.json  project.json
shared-domain/src/lib/: shared-domain.ts
web/: eslint.config.mjs  project.json
web/src/app/: app.html  nx-welcome.ts
