[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-fanteasy-ranker"
version = "0.1.0"
description = "Custom NHL fantasy player ranking and AI suggestions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NHL Fanteasy" }]
dependencies = [
  "typer[all]",
  "httpx",
  "pydantic>=2",
  "pandas",
  "numpy",
]

[project.scripts]
ranker = "ranker.cli:app"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]


